--- a/HTML-CSS/projeto03/style.css
+++ b/HTML-CSS/projeto03/style.css
@@ -185,7 +185,7 @@ footer {
     padding: 40px 64px;
     margin-bottom: 100px;
     border-top: 1px solid #d8d8d8;
-    border-radius: 0px 0px 8px 8px;
+    bordexr-radius: 0px 0px 8px 8px;
 }
 
 .button {
