--- a/HTML-CSS/projeto03/style.css
+++ b/HTML-CSS/projeto03/style.css
@@ -123,7 +123,7 @@ fieldset legend {
 
 .input-wrapper select {
     appearance: none;
-    background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg clip-path='url(%23clip0_1_54)'%3E%3Cpath d='M8 10L12 14L16 10' stroke='%239C98A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/g%3E%3Cdefs%3E%3CclipPath id='clip0_1_54'%3E%3Crect width='24' height='24' fill='white'/%3E%3C/clipPath%3E%3C/defs%3E%3C/svg%3E%0A");
+    
     background-repeat: no-repeat;
     background-position: center right 24px;
 }
@@ -185,7 +185,7 @@ footer {
     padding: 40px 64px;
     margin-bottom: 100px;
     border-top: 1px solid #d8d8d8;
-    bordexr-radius: 0px 0px 8px 8px;
+    border-radius: 0px 0px 8px 8px;
 }
 
 .button {
