--- a/full-stack/desafios/local_turistico/css/style.css
+++ b/full-stack/desafios/local_turistico/css/style.css
@@ -60,12 +60,20 @@ header p {
     font-style: var(--fw-subt);
 }
 
+span + h2  {
+    margin-bottom: 8px;
+}
+
 section p {
-    margin-bottom: 4rem;
     color: var(--text-secondary);
 }
 
 section img {
+    margin-top: 4rem;
     height: 21.5rem;
     margin-bottom: 8px;
+}
+
+footer {
+    text-align: center;
 }
