--- a/full-stack/desafios/local_turistico/css/style.css
+++ b/full-stack/desafios/local_turistico/css/style.css
@@ -22,7 +22,7 @@ html {
     font-family: 'Open Sans', sans-serif;
     font-size: 1rem;
     color: var(--text-primary);
-    padding: 5rem;
+    padding: 5rem 5rem 0;
 }
 
 body {
@@ -31,6 +31,7 @@ body {
 }
 
 img {
+    margin-top: 4rem;
     border-radius: 1.75rem;
     width: 100%;
     object-fit: cover;
@@ -69,11 +70,34 @@ section p {
 }
 
 section img {
-    margin-top: 4rem;
     height: 21.5rem;
     margin-bottom: 8px;
 }
 
+hr + p  {
+    text-align: center;
+}
+
+ul {
+    color: #0C51A7;
+    padding: 0 1rem;
+    font-weight: var(--fw-bold);
+}
+
+section:nth-child(4) ul{
+    & li:nth-child(1) {
+        color: #E95E10;
+    }
+    & li:nth-child(2) {
+        color: #E5245E;
+    }
+    & li:nth-child(3) {
+        color: #591B98;
+    }
+}
+
 footer {
+    font-family: 'Alice', sans-serif;
+    margin: 4rem;
     text-align: center;
 }
